--- a/data-architect.html
+++ b/data-architect.html
@@ -73,7 +73,7 @@
 <p><span class="badge badge-light">Foster City California</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/datacom.co.nz/8d020c57-1b03-405d-94ea-43a04ebfe0ff'>Datacom - Infrastructure Architect - Security cleared</a></h5> 
+<h5><a href='https://jobs.lever.co/datacom.co.nz/8d020c57-1b03-405d-94ea-43a04ebfe0ff'>Datacom - Infrastructure Architect - Security cleared</a></h5> 
 <p><span class="badge badge-light">Canberra</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -89,7 +89,7 @@
 <p><span class="badge badge-light">Charlotte, NC</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Datazymes/743999698618291-product-technical-architect'>Datazymes Product / Technical Architect | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Datazymes/743999698618291-product-technical-architect'>Datazymes Product / Technical Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -125,7 +125,7 @@
 <p><span class="badge badge-light">Atlanta, GA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jellysmack.recruitee.com/l/en/o/database-architect-hf-cdi-corse'>
+<h5><a href='https://jellysmack.recruitee.com/l/en/o/database-architect-hf-cdi-corse'>
       Database Architect H/F - CDI (Corse) - Jellysmack
     </a></h5> 
 <p><span class="badge badge-light">France</span></p>
@@ -159,7 +159,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='http://imanagecom.applytojob.com/apply/BhmLHiSOki/Data-Architect'>Data Architect - iManage - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://imanagecom.applytojob.com/apply/BhmLHiSOki/Data-Architect'>Data Architect - iManage - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -197,7 +197,7 @@ dig?...</p>
 <p><span class="badge badge-light">Dallas, Texas</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://vodafone.referrals.selectminds.com/jobs/data-solutions-architect-63502'>Data Solutions Architect - Vodafone Careers</a></h5> 
+<h5><a href='https://vodafone.referrals.selectminds.com/jobs/data-solutions-architect-63502'>Data Solutions Architect - Vodafone Careers</a></h5> 
 <p><span class="badge badge-light">London London London</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -229,7 +229,7 @@ dig?...</p>
 <p><span class="badge badge-light">Minneapolis, MNMinneapolis</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BuzzClanLLC/743999698067473-senior-pl-sql-database-architect'>BuzzClan LLC Senior PL/ SQL Database Architect | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BuzzClanLLC/743999698067473-senior-pl-sql-database-architect'>BuzzClan LLC Senior PL/ SQL Database Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -396,11 +396,11 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qahaVfwg&k=Job&j=omambfwN&__jvst=Employee&__jvsd=sTR6fgwQ&__jvsc=Twitter&bid=ncuVbMw3'>Santander Consumer USA Careers - Data Architect</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qahaVfwg&k=Job&j=omambfwN&__jvst=Employee&__jvsd=sTR6fgwQ&__jvsc=Twitter&bid=ncuVbMw3'>Santander Consumer USA Careers - Data Architect</a></h5> 
 <p><span class="badge badge-light">Dallas, Texas</span></p>
 <p>Posted on:: 2019-10-16</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/kalos/job/tksrzapahh3it9krqfpz8xwwey'>Lead Data Modeler Consultant (Data Architect) | Kalos Consulting, Inc.</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/kalos/job/tksrzapahh3it9krqfpz8xwwey'>Lead Data Modeler Consultant (Data Architect) | Kalos Consulting, Inc.</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
@@ -408,7 +408,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">New York, NY 10014, USA</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/sessionm/6a7bcfda-df3e-4134-b8c0-dc31acaddf86'>SessionM - Data Architect</a></h5> 
+<h5><a href='https://jobs.lever.co/sessionm/6a7bcfda-df3e-4134-b8c0-dc31acaddf86'>SessionM - Data Architect</a></h5> 
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
@@ -416,7 +416,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<h5><a href='https://tiger-analytics.workable.com/jobs/1144280'>Big Data Architect - Apply online - Tiger Analytics - Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tiger-analytics.workable.com/jobs/1144280'>Big Data Architect - Apply online - Tiger Analytics - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 4, 2019 ... Our consultants bring deep expertise in Data Science, Machine Learning and AI. 
 We are the trusted analytics partner for several Fortune 100 companies,?...</p>
@@ -458,7 +458,7 @@ our Federal Client's business in defining requirements to support machine?...</p
 <p><span class="badge badge-light">San Mateo, CA  San Mateo, CA  San Mateo, California</span></p>
 <p>Posted on:: 2019-10-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/incorta/jobs/4458760002'>Job Application for SAP ERP Data Architect at Incorta</a></h5> 
+<h5><a href='https://boards.greenhouse.io/incorta/jobs/4458760002'>Job Application for SAP ERP Data Architect at Incorta</a></h5> 
 <p><span class="badge badge-light">San Mateo</span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
