--- a/devops.html
+++ b/devops.html
@@ -38,6 +38,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=oQVLafwq&__jvst=Employee+Referral&__jvsd=s3e5bgwi&__jvsc=Twitter&bid=nVJ8qMwt'>Jobvite, Inc. Careers - Senior DevOps Tooling Engineer (remote)</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oYSzafwj&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nTB6qMwh'>Guidewire Software, Inc. Careers - Cloud DevOps Manager</a></h5> 
 <p><span class="badge badge-light">Toronto, Canada</span></p>
 <p>Posted on:: 2019-11-01</p>
@@ -66,7 +70,7 @@
 <p><span class="badge badge-light">United States  Fremont, CA</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.jobware.net/Job/Senior-DevOps-Engineer-m-f-x-at-CyberSolutions.351823275.html?jw_chl_seg=YOURJOBINGERMANY&skin=zaehlpixel_only'>(Senior) DevOps Engineer (m/f/x) at CyberSolutions | Hubert Burda Media Holding Kommanditgesellschaft | Job</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobware.net/Job/Senior-DevOps-Engineer-m-f-x-at-CyberSolutions.351823275.html?jw_chl_seg=YOURJOBINGERMANY&skin=zaehlpixel_only'>(Senior) DevOps Engineer (m/f/x) at CyberSolutions | Hubert Burda Media Holding Kommanditgesellschaft | Job</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -86,7 +90,7 @@
 <p><span class="badge badge-light">Chicago, Illinois</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/couchbase/553f86d3-dd49-4a9d-bba9-8ae01fbe454d'>Couchbase - DevOps Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/couchbase/553f86d3-dd49-4a9d-bba9-8ae01fbe454d'>Couchbase - DevOps Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -98,7 +102,7 @@
 <p><span class="badge badge-light">Tel Aviv, Israel</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/medmen/jobs/4500558002'>Job Application for Staff DevOps Engineer at MedMen</a></h5> 
+<h5><a href='https://boards.greenhouse.io/medmen/jobs/4500558002'>Job Application for Staff DevOps Engineer at MedMen</a></h5> 
 <p><span class="badge badge-light">Culver City, CA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -138,7 +142,7 @@
 <p><span class="badge badge-light">Boston United States</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://orbitpeople.applytojob.com/apply/LIkyCEjfL7/Devops-Operational-Support'>Devops Operational Support - Orb IT People - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://orbitpeople.applytojob.com/apply/LIkyCEjfL7/Devops-Operational-Support'>Devops Operational Support - Orb IT People - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -146,7 +150,7 @@
 <p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/maven-wave-partners/job/ojembfwO'>Maven Wave Partners Careers - Tech Analyst / Tech Lead - DevOps</a></h5> 
+<h5><a href='https://jobs.jobvite.com/maven-wave-partners/job/ojembfwO'>Maven Wave Partners Careers - Tech Analyst / Tech Lead - DevOps</a></h5> 
 <p><span class="badge badge-light">Gurgaon, India</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -192,7 +196,7 @@
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/bankerstoolbox/job/otOsbfwE'>Abrigo Careers - DevOps Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/bankerstoolbox/job/otOsbfwE'>Abrigo Careers - DevOps Engineer</a></h5> 
 <p><span class="badge badge-light">Raleigh, North Carolina</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -326,7 +330,7 @@
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/site-reliability-engineer--devops-engineer-1808333/?gh_src=82a8057f1'>Site Reliability Engineer/ DevOps Engineer | Okta</a></h5> 
+<h5><a href='https://www.okta.com/company/careers/engineering/site-reliability-engineer--devops-engineer-1808333/?gh_src=82a8057f1'>Site Reliability Engineer/ DevOps Engineer | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -368,11 +372,11 @@
 <p><span class="badge badge-light">Sydney Australia</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ringcentral/job/oCXrbfwV'>RingCentral Careers - DevOps</a></h5> 
+<h5><a href='https://jobs.jobvite.com/ringcentral/job/oCXrbfwV'>RingCentral Careers - DevOps</a></h5> 
 <p><span class="badge badge-light">Paris, France  Paris</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://openvpninc.recruitee.com/o/lead-devops-engineer-3'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://openvpninc.recruitee.com/o/lead-devops-engineer-3'>
       Lead DevOps Engineer - OpenVPN Inc.
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -402,7 +406,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://techflow.applytojob.com/apply/iael3W0CxB/DevOps-Engineer'>DevOps Engineer - TechFlow - Career Page</a></h5> 
+<h5><a href='https://techflow.applytojob.com/apply/iael3W0CxB/DevOps-Engineer'>DevOps Engineer - TechFlow - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 19, 2019 ... Apply to DevOps Engineer at TechFlow in Reston, VA.</p>
 <hr/>
@@ -438,7 +442,7 @@ internal IT operations. You will be completing tasks in support of our IT functi
 <p><span class="badge badge-light">Redwood City, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Playtech/743999698463744-devops-engineer-010940-'>Playtech DevOps Engineer [010940] | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Playtech/743999698463744-devops-engineer-010940-'>Playtech DevOps Engineer [010940] | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Kyiv, Ukraine  London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -455,11 +459,6 @@ internal IT operations. You will be completing tasks in support of our IT functi
 </a></h5> 
 <p><span class="badge badge-light">Reykjav?k, Iceland Montreal</span></p>
 <p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://ghr.wd1.myworkdayjobs.com/Lateral-US/job/Addison/DevOps-Engineer---Continuous-Integration-Continuous-Delivery_19069159'>DevOps Engineer</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Oct 15, 2019 ... The Continuous Integration/Continuous Delivery DevOps Engineer will join an 
-agile service team focused on daily production service delivery and application?...</p>
 <hr/>
 
 
